compiler/hoyo.output
Terminals unused in grammar

   R_ARROW
   NOT
   FOR
   DO
   DOLLA
   T_ADD
   T_SUB
   T_MUL
   T_DIV
   T_MOD


Grammar

    0 $accept: everything $end

    1 everything: statements

    2 statements: %empty
    3           | statements statement

    4 statement: exp SEMICOLON
    5          | PRINT BRK_OP exp_list BRK_CL SEMICOLON
    6          | BREAK SEMICOLON
    7          | CONTINUE SEMICOLON
    8          | BREAKPOINT SEMICOLON
    9          | RETURN exp SEMICOLON
   10          | ifelse_statement
   11          | while_statement
   12          | func_decl
   13          | import SEMICOLON
   14          | class_decl

   15 class_decl_inner: %empty
   16                 | class_decl_inner func_decl

   17 class_decl: CLASS LABEL BRK_C_OP class_decl_inner BRK_C_CL

   18 import: IMPORT STRING
   19       | IMPORT STRING AS LABEL
   20       | IMPORT STRING AS LABEL FROM STRING

   21 label_list: LABEL
   22           | label_list COMMA LABEL

   23 func_decl: FUNCTION LABEL BRK_OP BRK_CL BRK_C_OP statements BRK_C_CL
   24          | FUNCTION LABEL BRK_OP label_list BRK_CL BRK_C_OP statements BRK_C_CL

   25 term: INT
   26     | FLOAT
   27     | STRING
   28     | TRUE
   29     | FALSE
   30     | BRK_S_OP BRK_S_CL
   31     | BRK_S_OP exp_list BRK_S_CL
   32     | BRK_OP exp BRK_CL
   33     | term BRK_OP BRK_CL
   34     | term BRK_OP exp_list BRK_CL
   35     | dict
   36     | LABEL
   37     | term DOT LABEL
   38     | term BRK_S_OP exp BRK_S_CL

   39 exp_multiplicative: term MUL term
   40                   | term DIV term
   41                   | term

   42 exp_additive: exp_multiplicative ADD exp_multiplicative
   43             | exp_multiplicative SUB exp_multiplicative
   44             | exp_multiplicative

   45 exp_relational: exp_additive LSS exp_additive
   46               | exp_additive GRT exp_additive
   47               | exp_additive LEQ exp_additive
   48               | exp_additive GEQ exp_additive
   49               | exp_additive EQL exp_additive
   50               | exp_additive NQL exp_additive
   51               | exp_additive

   52 exp_logical: exp_relational AND exp_relational
   53            | exp_relational OR exp_relational
   54            | exp_relational XOR exp_relational
   55            | exp_relational

   56 exp: exp_logical ASSIGN exp_logical
   57    | exp_logical

   58 dict_inner: STRING DDOTS exp
   59           | LABEL DDOTS exp
   60           | dict_inner COMMA STRING DDOTS exp
   61           | dict_inner COMMA LABEL DDOTS exp

   62 dict: BRK_C_OP BRK_C_CL
   63     | BRK_C_OP dict_inner BRK_C_CL

   64 exp_list: exp
   65         | exp_list COMMA exp

   66 ifelse_statement: if_statement ELSE BRK_C_OP statements BRK_C_CL
   67                 | if_statement

   68 if_statement: IF exp BRK_C_OP statements BRK_C_CL

   69 while_statement: WHILE exp BRK_C_OP statements BRK_C_CL


Terminals, with rules where they appear

$end (0) 0
error (256)
INT <value_i64> (258) 25
FLOAT <value_f64> (259) 26
STRING <value_string> (260) 18 19 20 27 58 60
LABEL <label> (261) 17 19 20 21 22 23 24 36 37 59 61
ADD (262) 42
SUB (263) 43
MUL (264) 39
DIV (265) 40
EQL (266) 49
NQL (267) 50
LSS (268) 45
GRT (269) 46
LEQ (270) 47
GEQ (271) 48
AND (272) 52
OR (273) 53
XOR (274) 54
ASSIGN (275) 56
BRK_OP (276) 5 23 24 32 33 34
BRK_CL (277) 5 23 24 32 33 34
R_ARROW (278)
COMMA (279) 22 60 61 65
BRK_C_OP (280) 17 23 24 62 63 66 68 69
BRK_C_CL (281) 17 23 24 62 63 66 68 69
SEMICOLON (282) 4 5 6 7 8 9 13
IMPORT (283) 18 19 20
FROM (284) 20
AS (285) 19 20
CLASS (286) 17
NOT (287)
FOR (288)
WHILE (289) 69
DO (290)
IF (291) 68
ELSE (292) 66
PRINT (293) 5
BREAK (294) 6
CONTINUE (295) 7
RETURN (296) 9
BRK_S_OP (297) 30 31 38
BRK_S_CL (298) 30 31 38
DOT (299) 37
DDOTS (300) 58 59 60 61
FUNCTION (301) 23 24
DOLLA (302)
TRUE (303) 28
FALSE (304) 29
BREAKPOINT (305) 8
T_ADD (306)
T_SUB (307)
T_MUL (308)
T_DIV (309)
T_MOD (310)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
everything (57)
    on left: 1, on right: 0
statements <node> (58)
    on left: 2 3, on right: 1 3 23 24 66 68 69
statement <node> (59)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 3
class_decl_inner <node> (60)
    on left: 15 16, on right: 16 17
class_decl <node> (61)
    on left: 17, on right: 14
import <node> (62)
    on left: 18 19 20, on right: 13
label_list <node> (63)
    on left: 21 22, on right: 22 24
func_decl <node> (64)
    on left: 23 24, on right: 12 16
term <node> (65)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right: 33
    34 37 38 39 40 41
exp_multiplicative <node> (66)
    on left: 39 40 41, on right: 42 43 44
exp_additive <node> (67)
    on left: 42 43 44, on right: 45 46 47 48 49 50 51
exp_relational <node> (68)
    on left: 45 46 47 48 49 50 51, on right: 52 53 54 55
exp_logical <node> (69)
    on left: 52 53 54 55, on right: 56 57
exp <node> (70)
    on left: 56 57, on right: 4 9 32 38 58 59 60 61 64 65 68 69
dict_inner <node> (71)
    on left: 58 59 60 61, on right: 60 61 63
dict <node> (72)
    on left: 62 63, on right: 35
exp_list <node> (73)
    on left: 64 65, on right: 5 31 34 65
ifelse_statement <node> (74)
    on left: 66 67, on right: 10
if_statement <node> (75)
    on left: 68, on right: 66 67
while_statement <node> (76)
    on left: 69, on right: 11


State 0

    0 $accept: . everything $end

    $default  reduce using rule 2 (statements)

    everything  go to state 1
    statements  go to state 2


State 1

    0 $accept: everything . $end

    $end  shift, and go to state 3


State 2

    1 everything: statements .
    3 statements: statements . statement

    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    STRING      shift, and go to state 6
    LABEL       shift, and go to state 7
    BRK_OP      shift, and go to state 8
    BRK_C_OP    shift, and go to state 9
    IMPORT      shift, and go to state 10
    CLASS       shift, and go to state 11
    WHILE       shift, and go to state 12
    IF          shift, and go to state 13
    PRINT       shift, and go to state 14
    BREAK       shift, and go to state 15
    CONTINUE    shift, and go to state 16
    RETURN      shift, and go to state 17
    BRK_S_OP    shift, and go to state 18
    FUNCTION    shift, and go to state 19
    TRUE        shift, and go to state 20
    FALSE       shift, and go to state 21
    BREAKPOINT  shift, and go to state 22

    $default  reduce using rule 1 (everything)

    statement           go to state 23
    class_decl          go to state 24
    import              go to state 25
    func_decl           go to state 26
    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 32
    dict                go to state 33
    ifelse_statement    go to state 34
    if_statement        go to state 35
    while_statement     go to state 36


State 3

    0 $accept: everything $end .

    $default  accept


State 4

   25 term: INT .

    $default  reduce using rule 25 (term)


State 5

   26 term: FLOAT .

    $default  reduce using rule 26 (term)


State 6

   27 term: STRING .

    $default  reduce using rule 27 (term)


State 7

   36 term: LABEL .

    $default  reduce using rule 36 (term)


State 8

   32 term: BRK_OP . exp BRK_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 37
    dict                go to state 33


State 9

   62 dict: BRK_C_OP . BRK_C_CL
   63     | BRK_C_OP . dict_inner BRK_C_CL

    STRING    shift, and go to state 38
    LABEL     shift, and go to state 39
    BRK_C_CL  shift, and go to state 40

    dict_inner  go to state 41


State 10

   18 import: IMPORT . STRING
   19       | IMPORT . STRING AS LABEL
   20       | IMPORT . STRING AS LABEL FROM STRING

    STRING  shift, and go to state 42


State 11

   17 class_decl: CLASS . LABEL BRK_C_OP class_decl_inner BRK_C_CL

    LABEL  shift, and go to state 43


State 12

   69 while_statement: WHILE . exp BRK_C_OP statements BRK_C_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 44
    dict                go to state 33


State 13

   68 if_statement: IF . exp BRK_C_OP statements BRK_C_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 45
    dict                go to state 33


State 14

    5 statement: PRINT . BRK_OP exp_list BRK_CL SEMICOLON

    BRK_OP  shift, and go to state 46


State 15

    6 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 47


State 16

    7 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 17

    9 statement: RETURN . exp SEMICOLON

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 49
    dict                go to state 33


State 18

   30 term: BRK_S_OP . BRK_S_CL
   31     | BRK_S_OP . exp_list BRK_S_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    BRK_S_CL  shift, and go to state 50
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 51
    dict                go to state 33
    exp_list            go to state 52


State 19

   23 func_decl: FUNCTION . LABEL BRK_OP BRK_CL BRK_C_OP statements BRK_C_CL
   24          | FUNCTION . LABEL BRK_OP label_list BRK_CL BRK_C_OP statements BRK_C_CL

    LABEL  shift, and go to state 53


State 20

   28 term: TRUE .

    $default  reduce using rule 28 (term)


State 21

   29 term: FALSE .

    $default  reduce using rule 29 (term)


State 22

    8 statement: BREAKPOINT . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 23

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 24

   14 statement: class_decl .

    $default  reduce using rule 14 (statement)


State 25

   13 statement: import . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 26

   12 statement: func_decl .

    $default  reduce using rule 12 (statement)


State 27

   33 term: term . BRK_OP BRK_CL
   34     | term . BRK_OP exp_list BRK_CL
   37     | term . DOT LABEL
   38     | term . BRK_S_OP exp BRK_S_CL
   39 exp_multiplicative: term . MUL term
   40                   | term . DIV term
   41                   | term .

    MUL       shift, and go to state 56
    DIV       shift, and go to state 57
    BRK_OP    shift, and go to state 58
    BRK_S_OP  shift, and go to state 59
    DOT       shift, and go to state 60

    $default  reduce using rule 41 (exp_multiplicative)


State 28

   42 exp_additive: exp_multiplicative . ADD exp_multiplicative
   43             | exp_multiplicative . SUB exp_multiplicative
   44             | exp_multiplicative .

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62

    $default  reduce using rule 44 (exp_additive)


State 29

   45 exp_relational: exp_additive . LSS exp_additive
   46               | exp_additive . GRT exp_additive
   47               | exp_additive . LEQ exp_additive
   48               | exp_additive . GEQ exp_additive
   49               | exp_additive . EQL exp_additive
   50               | exp_additive . NQL exp_additive
   51               | exp_additive .

    EQL  shift, and go to state 63
    NQL  shift, and go to state 64
    LSS  shift, and go to state 65
    GRT  shift, and go to state 66
    LEQ  shift, and go to state 67
    GEQ  shift, and go to state 68

    $default  reduce using rule 51 (exp_relational)


State 30

   52 exp_logical: exp_relational . AND exp_relational
   53            | exp_relational . OR exp_relational
   54            | exp_relational . XOR exp_relational
   55            | exp_relational .

    AND  shift, and go to state 69
    OR   shift, and go to state 70
    XOR  shift, and go to state 71

    $default  reduce using rule 55 (exp_logical)


State 31

   56 exp: exp_logical . ASSIGN exp_logical
   57    | exp_logical .

    ASSIGN  shift, and go to state 72

    $default  reduce using rule 57 (exp)


State 32

    4 statement: exp . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 33

   35 term: dict .

    $default  reduce using rule 35 (term)


State 34

   10 statement: ifelse_statement .

    $default  reduce using rule 10 (statement)


State 35

   66 ifelse_statement: if_statement . ELSE BRK_C_OP statements BRK_C_CL
   67                 | if_statement .

    ELSE  shift, and go to state 74

    $default  reduce using rule 67 (ifelse_statement)


State 36

   11 statement: while_statement .

    $default  reduce using rule 11 (statement)


State 37

   32 term: BRK_OP exp . BRK_CL

    BRK_CL  shift, and go to state 75


State 38

   58 dict_inner: STRING . DDOTS exp

    DDOTS  shift, and go to state 76


State 39

   59 dict_inner: LABEL . DDOTS exp

    DDOTS  shift, and go to state 77


State 40

   62 dict: BRK_C_OP BRK_C_CL .

    $default  reduce using rule 62 (dict)


State 41

   60 dict_inner: dict_inner . COMMA STRING DDOTS exp
   61           | dict_inner . COMMA LABEL DDOTS exp
   63 dict: BRK_C_OP dict_inner . BRK_C_CL

    COMMA     shift, and go to state 78
    BRK_C_CL  shift, and go to state 79


State 42

   18 import: IMPORT STRING .
   19       | IMPORT STRING . AS LABEL
   20       | IMPORT STRING . AS LABEL FROM STRING

    AS  shift, and go to state 80

    $default  reduce using rule 18 (import)


State 43

   17 class_decl: CLASS LABEL . BRK_C_OP class_decl_inner BRK_C_CL

    BRK_C_OP  shift, and go to state 81


State 44

   69 while_statement: WHILE exp . BRK_C_OP statements BRK_C_CL

    BRK_C_OP  shift, and go to state 82


State 45

   68 if_statement: IF exp . BRK_C_OP statements BRK_C_CL

    BRK_C_OP  shift, and go to state 83


State 46

    5 statement: PRINT BRK_OP . exp_list BRK_CL SEMICOLON

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 51
    dict                go to state 33
    exp_list            go to state 84


State 47

    6 statement: BREAK SEMICOLON .

    $default  reduce using rule 6 (statement)


State 48

    7 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 7 (statement)


State 49

    9 statement: RETURN exp . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 50

   30 term: BRK_S_OP BRK_S_CL .

    $default  reduce using rule 30 (term)


State 51

   64 exp_list: exp .

    $default  reduce using rule 64 (exp_list)


State 52

   31 term: BRK_S_OP exp_list . BRK_S_CL
   65 exp_list: exp_list . COMMA exp

    COMMA     shift, and go to state 86
    BRK_S_CL  shift, and go to state 87


State 53

   23 func_decl: FUNCTION LABEL . BRK_OP BRK_CL BRK_C_OP statements BRK_C_CL
   24          | FUNCTION LABEL . BRK_OP label_list BRK_CL BRK_C_OP statements BRK_C_CL

    BRK_OP  shift, and go to state 88


State 54

    8 statement: BREAKPOINT SEMICOLON .

    $default  reduce using rule 8 (statement)


State 55

   13 statement: import SEMICOLON .

    $default  reduce using rule 13 (statement)


State 56

   39 exp_multiplicative: term MUL . term

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term  go to state 89
    dict  go to state 33


State 57

   40 exp_multiplicative: term DIV . term

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term  go to state 90
    dict  go to state 33


State 58

   33 term: term BRK_OP . BRK_CL
   34     | term BRK_OP . exp_list BRK_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_CL    shift, and go to state 91
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 51
    dict                go to state 33
    exp_list            go to state 92


State 59

   38 term: term BRK_S_OP . exp BRK_S_CL

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 29
    exp_relational      go to state 30
    exp_logical         go to state 31
    exp                 go to state 93
    dict                go to state 33


State 60

   37 term: term DOT . LABEL

    LABEL  shift, and go to state 94


State 61

   42 exp_additive: exp_multiplicative ADD . exp_multiplicative

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 95
    dict                go to state 33


State 62

   43 exp_additive: exp_multiplicative SUB . exp_multiplicative

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 96
    dict                go to state 33


State 63

   49 exp_relational: exp_additive EQL . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 97
    dict                go to state 33


State 64

   50 exp_relational: exp_additive NQL . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 98
    dict                go to state 33


State 65

   45 exp_relational: exp_additive LSS . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 99
    dict                go to state 33


State 66

   46 exp_relational: exp_additive GRT . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 100
    dict                go to state 33


State 67

   47 exp_relational: exp_additive LEQ . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 101
    dict                go to state 33


State 68

   48 exp_relational: exp_additive GEQ . exp_additive

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    LABEL     shift, and go to state 7
    BRK_OP    shift, and go to state 8
    BRK_C_OP  shift, and go to state 9
    BRK_S_OP  shift, and go to state 18
    TRUE      shift, and go to state 20
    FALSE     shift, and go to state 21

    term                go to state 27
    exp_multiplicative  go to state 28
    exp_additive        go to state 102
    dict                go to state 33


State 69

   52 exp_logical: exp_relational AND . exp_relational
